[workspace]
members = [
    ".",
    "core",
    "grpc",
    "http",
    "load",
    "server",
    "tcp",
]

[package]
name = "ort"
version = "0.2.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
license = "Apache-2.0"
description = "A proxy load-testing harness"

[features]
grpc-fmt = ["ort-load/grpc-fmt", "ort-server/grpc-fmt"]

[dependencies]
num_cpus = "1"
ort-load = { path = "./load" }
ort-server = { path = "./server" }
structopt = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = "0.2"
tracing = "0.1"
