[workspace]
members = [
    ".",
    "core",
    "grpc",
    "http",
    "load",
    "server",
    "tcp",
]

[package]
name = "ort"
version = "0.2.9"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2021"
license = "Apache-2.0"
description = "A proxy load-testing harness"

[features]
default = []
grpc-fmt = ["ort-load/grpc-fmt", "ort-server/grpc-fmt"]

[dependencies]
num_cpus = "1"
ort-load = { version = "0.2", path = "./load" }
ort-server = { version = "0.2", path = "./server" }
structopt = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = "0.2"
tracing = "0.1"

[target.x86_64-unknown-linux-gnu.dependencies]
jemallocator = { version = "0.3" }

[profile.release]
lto = true
