[package]
name = "ort-core"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
publish = false
license = "Apache-2.0"

[features]
deser = ["serde", "bytes/serde"]

[dependencies]
async-trait = "0.1"
bytes = "1"
indexmap = "1.0"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1", features = ["macros", "sync", "time"] }
