[package]
name = "ort-core"
version = "0.2.4"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
license = "Apache-2.0"
description = "Core types for the Ort proxy load-testing harness"

[features]
deser = ["serde", "bytes/serde"]

[dependencies]
async-trait = "0.1"
bytes = "1"
indexmap = "1.7"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1", features = ["macros", "sync", "time"] }
