[package]
name = "ort-grpc"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
publish = false
license = "Apache-2.0"

[features]
rustfmt = ["tonic-build/rustfmt"]
transport = ["tonic-build/transport", "tonic/transport"]
client = ["async-trait", "http", "ort-core", "tracing", "transport"]
server = ["async-trait", "drain", "futures", "ort-core", "tokio/time", "tracing", "transport"]

[dependencies]
prost = "0.7"
prost-types = "0.7"

async-trait = { version = "0.1", optional = true }
drain = { version = "0.0.1", optional = true }
futures = { version = "0.3", default-features = false, optional = true }
http = { version = "0.2", optional = true }
ort-core = { path = "../core", optional = true }
tokio = { version = "1", optional = true }
tonic = { version = "0.4", default-features = false, features = ["prost", "codegen"] }
tracing = { version = "0.1", optional = true }

[build-dependencies]
tonic-build = { version = "0.4", features = ["prost"], default-features = false }
