[package]
name = "ort-grpc"
version = "0.2.9"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2021"
license = "Apache-2.0"
description = "A gRPC client and server for the Ort proxy load-testing harness"

[features]
rustfmt = ["tonic-build/rustfmt"]
transport = ["tonic-build/transport", "tonic/transport"]
client = ["async-trait", "http", "ort-core", "tracing", "transport"]
server = ["async-trait", "drain", "futures", "ort-core", "tokio/time", "tracing", "transport"]

[dependencies]
async-trait = { version = "0.1", optional = true }
drain = { version = "0.1", optional = true }
futures = { version = "0.3", default-features = false, optional = true }
http = { version = "0.2", optional = true }
ort-core = { version = "0.2", path = "../core", optional = true }
prost = "0.8"
prost-types = "0.8"
tokio = { version = "1", optional = true }
tonic = { version = "0.5", default-features = false, features = ["prost", "codegen"] }
tracing = { version = "0.1", optional = true }

[build-dependencies]
tonic-build = { version = "0.5", features = ["prost"], default-features = false }
