[package]
name = "ort-http"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
publish = false
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
futures = "0.3"
http = "0.2"
hyper = "0.14"
linkerd-drain = { git = "https://github.com/linkerd/linkerd2-proxy", branch = "main" }
ort-core = { path = "../core" }
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
tracing-futures = "0.2"
