[package]
name = "ort-http"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
publish = false
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
drain = "0.0.1"
futures = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["http1", "client", "server", "tcp"] }
ort-core = { path = "../core" }
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
