[package]
name = "ort-http"
version = "0.2.9"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2021"
license = "Apache-2.0"
description = "A HTTP client and server for the Ort proxy load-testing harness"

[dependencies]
async-trait = "0.1"
drain = "0.1"
futures = { version = "0.3", default-features = false }
http = "0.2"
hyper = { version = "0.14", features = ["http1", "client", "server", "tcp"] }
ort-core = { version = "0.2", path = "../core" }
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
