[package]
name = "ort-load"
version = "0.1.16"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
publish = false
license = "Apache-2.0"

[features]
grpc-fmt = ["ort-grpc/rustfmt"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
http = "0.2"
hyper = "0.14"
ort-core = { path = "../core" }
ort-grpc = { path = "../grpc", features = ["client"] }
ort-http = { path = "../http" }
ort-tcp = { path = "../tcp" }
linkerd-metrics = { git = "https://github.com/linkerd/linkerd2-proxy", branch = "main", features = ["summary"] }
parking_lot = "0.11"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["macros", "signal", "sync", "time"] }
tracing = "0.1"
tracing-futures = "0.2"
