[package]
name = "ort-load"
version = "0.2.11"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2021"
license = "Apache-2.0"
description = "The Ort proxy load-testing client"

[features]
grpc-fmt = ["ort-grpc/rustfmt"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "3", features = ["derive"] }
futures = { version = "0.3", default-features = false }
http = "0.2"
hyper = { version = "0.14", default-features = false }
ort-core = { version = "0.2", path = "../core" }
ort-grpc = { version = "0.2", path = "../grpc", features = ["client"] }
ort-http = { version = "0.2", path = "../http" }
ort-tcp = { version = "0.2", path = "../tcp" }
linkerd-metrics = { git = "https://github.com/linkerd/linkerd2-proxy", branch = "main", features = ["summary"] }
parking_lot = "0.12"
rand = "0.8"
tokio = { version = "1", features = ["macros", "signal", "sync", "time"] }
tracing = "0.1"
