[package]
name = "ort-server"
version = "0.2.9"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2021"
license = "Apache-2.0"
description = "The Ort proxy load-testing server"

[features]
grpc-fmt = ["ort-grpc/rustfmt"]

[dependencies]
async-trait = "0.1"
bytes = "1"
drain = "0.1"
futures = { version = "0.3", default-features = false }
hyper = { version = "0.14", default-features = false, features = ["http1", "server", "tcp"] }
ort-core = { version = "0.2", path = "../core" }
ort-grpc = { version = "0.2", path = "../grpc", features = ["server"] }
ort-http = { version = "0.2", path = "../http" }
ort-tcp = { version = "0.2", path = "../tcp" }
rand =  "0.8"
structopt = "0.3"
tokio = { version = "1", features = ["macros", "signal", "time"] }
tonic = { version = "0.5", default-features = false }
tracing = "0.1"
