[package]
name = "ort-tcp"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
publish = false
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
bytes = "1"
drain = "0.1"
futures = { version = "0.3", default-features = false }
ort-core = { path = "../core" }
tokio = { version = "1", features = ["io-util", "macros", "net", "signal", "sync", "time"] }
tokio-util = { version = "0.6", features = ["codec"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }
